--- a/v2/package.json
+++ b/v2/package.json
@@ -10,17 +10,20 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuetify": "^2.5.1"
   },
   "devDependencies": {
+    "@mdi/font": "^5.9.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "material-design-icons-iconfont": "^6.1.0",
     "node-sass": "4.0.0",
     "sass-loader": "10.0.3",
     "vue-template-compiler": "^2.6.11"
