--- a/v2/package.json
+++ b/v2/package.json
@@ -24,6 +24,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^6.1.0",
+    "mockjs": "^1.1.0",
     "node-sass": "4.0.0",
     "sass-loader": "10.0.3",
     "vue-template-compiler": "^2.6.11"
