--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
   - name: clone
     image: plugins/git
     pull: if-not-exists
-    privileged: true
+#    privileged: true
     network_mode: bridge
     volumes:
       - name: git-cache
@@ -17,7 +17,7 @@ steps:
   - name: install
     image: node:10-alpine3.11
     pull: if-not-exists
-    privileged: true
+#    privileged: true
     volumes:
       - name: node-modules
         path: /drone/src/${DRONE_REPO_NAME}/node_modules
@@ -28,7 +28,7 @@ steps:
   - name: build
     image: node:10-alpine3.11
     pull: if-not-exists
-    privileged: true
+#    privileged: true
     volumes:
       - name: node-modules
         path: /drone/src/${DRONE_REPO_NAME}/node_modules
