--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^6.1.0",
     "mockjs": "^1.1.0",
-    "node-sass": "4.0.0",
+    "node-sass": "5.0.0",
+    "sass": "1.32.8",
     "sass-loader": "10.0.3",
     "vue-template-compiler": "^2.6.11"
   },
