--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "3.0.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
+    "tinymce": "^5.8.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuetify": "^2.5.1"
