--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "echarts": "^5.1.2",
     "tinymce": "^5.8.1",
     "vue": "^2.6.11",
+    "vue-navigation": "^1.1.4",
     "vue-router": "^3.5.1",
+    "vue-router-keep-alive-helper": "^0.0.23",
     "vuetify": "^2.5.1"
   },
   "devDependencies": {
