--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
-    "tinymce": "^5.8.1",
+    "tinymce": "5.8.1",
     "vue": "^2.6.11",
     "vue-navigation": "^1.1.4",
     "vue-router": "^3.5.1",
