--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
+    "lodash": "^4.17.21",
     "scroll-anchor": "^1.0.3",
     "tinymce": "5.8.1",
     "vue": "^2.6.11",
