--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "echarts": "^5.1.2",
     "lodash": "^4.17.21",
     "scroll-anchor": "^1.0.3",
+    "swiper": "5.x",
     "tinymce": "5.8.1",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-navigation": "^1.1.4",
     "vue-router": "^3.5.1",
     "vue-router-keep-alive-helper": "^0.0.23",
@@ -34,6 +36,7 @@
     "node-sass": "5.0.0",
     "sass": "1.32.8",
     "sass-loader": "10.0.3",
+    "sass-resources-loader": "^2.2.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
