--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
     "lodash": "^4.17.21",
+    "prerender-spa-plugin": "^3.4.0",
     "scroll-anchor": "^1.0.3",
     "swiper": "5.x",
     "tinymce": "5.8.1",
-    "v-calendar-mobile": "^1.0.0",
+    "v-calendar-mobile": "^1.0.2",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
     "vue-navigation": "^1.1.4",
