--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
+    "html2canvas": "^1.3.3",
     "iview": "^3.5.4",
     "lodash": "^4.17.21",
     "scroll-anchor": "^1.0.3",
