--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "vue-navigation": "^1.1.4",
     "vue-router": "^3.5.1",
     "vue-router-keep-alive-helper": "^0.0.23",
-    "vuetify": "^2.5.1"
+    "vuetify": "^2.5.1",
+    "wordcloud": "^1.2.2"
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
