--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
+    "gsap": "^3.10.4",
     "html2canvas": "^1.3.3",
     "iview": "^3.5.4",
     "jspreadsheet-ce": "^4.9.7",
