--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,15 @@ jobs:
       uses: actions/checkout@v2
       with:
         persist-credentials: false
-        
+    - name: use node
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14 # node版本
     # react项目为npm run-script build，vue项目改为npm run build
     - name: Install and Build
       run: |
         npm install
-        npm run-script build
+        npm run docs:build
      
     # react项目的FOLDER为build，vue项目改为dist   
     - name: Deploy
@@ -25,4 +28,4 @@ jobs:
       with:
         ACCESS_TOKEN: ${{ secrets.CI }}
         BRANCH: gh-pages
-        FOLDER: dist
+        FOLDER: /dist
