--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install and Build
       run: |
         npm install
-        npm run docs:build
+        npm run build
      
     # react项目的FOLDER为build，vue项目改为dist   
     - name: Deploy
